whiteboard-backend/k8s-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: whiteboard.haripothuri.in
      http:
        paths:
          - pathType: Prefix
            path: /whiteboard/
            backend:
              service:
                name: whiteboard-backend-lb
                port:
                  number: 9092
          - pathType: Prefix
            path: /socket.io/
            backend:
              service:
                name: whiteboard-backend-lb
                port:
                  number: 9092
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-static-files-server-lb
                port:
                   number: 80
